--- a/app/src/main/res/layout/layout_purpose.xml
+++ b/app/src/main/res/layout/layout_purpose.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginVertical="4dp"
     android:orientation="vertical"
-    android:background="@android:color/transparent"
+    android:background="@color/colorPrimary"
     >
 
     <LinearLayout
@@ -31,7 +31,7 @@
             tools:text="1"
             android:fontFamily="serif"
             android:textSize="18sp"
-            android:textColor="#512da8"
+            android:textColor="#fafafa"
             android:layout_weight="0"/>
 
         <TextView
@@ -41,6 +41,7 @@
             android:fontFamily="serif"
             android:textSize="18sp"
             android:layout_weight="1"
+            android:textColor="#fafafa"
             tools:text="@string/purpose_4" />
 
     </LinearLayout>
@@ -50,7 +51,7 @@
         android:layout_height="2dp"
         android:layout_gravity="start"
         android:layout_marginStart="64dp"
-        android:background="@android:color/darker_gray"
+        android:background="#fafafa"
         />
 
 </LinearLayout>
