Fix edittext focus issues, add top-level fab, prettify, some refactoring

--- a/app/src/main/res/layout/post_code_fragment.xml
+++ b/app/src/main/res/layout/post_code_fragment.xml
@@ -7,41 +7,24 @@
     tools:context=".ui.form.id.IdFragment">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="256dp"
-        android:layout_height="64dp"
+        android:id="@+id/box_postcode"
+        style="@style/TextInputStyle"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:hintEnabled="true">
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_post_code"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/post_code_hint"
-            android:backgroundTint="@android:color/white"
-            android:maxLines="1"
-            android:singleLine="true"
+            android:textColor="@color/text_main_color"
+            android:imeOptions="actionSend"
             android:inputType="number"
-            android:imeOptions="actionDone"
+            android:maxLines="1"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="32dp"
-        android:text="@string/send"
-        android:textColor="@color/colorPrimary"
-        android:backgroundTint="@color/colorAccent"
-        app:icon="@android:drawable/ic_menu_send"
-        app:iconTint="@color/colorPrimary"
-        app:iconGravity="end"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
