--- a/app/src/main/res/layout/id_fragment.xml
+++ b/app/src/main/res/layout/id_fragment.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginEnd="48dp"
     tools:context=".ui.form.id.IdFragment">
 
+
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="256dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/box_id"
+        style="@style/TextInputStyle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:hintEnabled="true">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusableInTouchMode="true"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_id"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/id_number_hint"
-            android:backgroundTint="@android:color/white"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            />
+            android:imeOptions="actionNext"
+            android:textColor="@color/text_main_color"
+            android:focusableInTouchMode="true"
+            android:textSize="18sp"
+            android:inputType="text"
+            android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
