--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,22 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity"
+    android:animateLayoutChanges="true"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <FrameLayout
         android:id="@+id/appbar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:elevation="0dp"
         android:backgroundTint="@android:color/transparent"
+        app:layout_constraintBottom_toTopOf="@id/pager"
+        app:layout_constraintVertical_weight="1"
+        android:animateLayoutChanges="true"
         >
 
         <ImageButton
@@ -30,36 +34,22 @@
             android:layout_gravity="end|top"
             android:src="@drawable/ic_info_outline"/>
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <cafe.adriel.krumbsview.KrumbsView
+            android:id="@+id/krumbs"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="?actionBarSize"
+            android:layout_gravity="bottom"
+            app:krumbsTypeface="@font/roboto_condensed_light"
+            app:krumbsTextSize="28sp"
+            app:krumbsCurrentItemTextColor="#fafafa"
+            app:krumbsPreviousItemTextColor="#e0e0e0"
+            app:krumbsSeparatorTintColor="#e0e0e0"
+            app:krumbsAnimationType="slideLeftRight"
+            app:krumbsBoldText="true"
             app:layout_collapseMode="pin"
-            app:layout_scrollFlags="scroll|enterAlways"
-            >
+            />
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"/>
-
-            <cafe.adriel.krumbsview.KrumbsView
-                android:id="@+id/krumbs"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                android:layout_gravity="bottom"
-                app:krumbsTypeface="@font/roboto_condensed_light"
-                app:krumbsTextSize="28sp"
-                app:krumbsCurrentItemTextColor="#fafafa"
-                app:krumbsPreviousItemTextColor="#e0e0e0"
-                app:krumbsSeparatorTintColor="#e0e0e0"
-                app:krumbsAnimationType="slideLeftRight"
-                app:krumbsBoldText="true"
-                app:layout_collapseMode="pin"
-                />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
+    </FrameLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
@@ -69,10 +59,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_weight="2"
+        app:layout_constraintVertical_weight="4"
         android:focusable="false"
         android:clickable="false"
         android:descendantFocusability="beforeDescendants"
+        android:animateLayoutChanges="true"
         />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
@@ -82,7 +73,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.95"
         android:text="@string/send"
         android:textColor="@color/colorPrimary"
         android:backgroundTint="@color/colorAccent"
