--- a/app/src/main/res/layout/post_code_fragment.xml
+++ b/app/src/main/res/layout/post_code_fragment.xml
@@ -12,6 +12,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
         <com.google.android.material.textfield.TextInputEditText
