--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,8 +36,7 @@
         <item name="android:textColor">@color/text_main_color</item>
         <item name="android:layout_width">256dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">64dp</item>
-        <item name="android:layout_marginBottom">32dp</item>
+        <item name="layout_constraintVertical_bias">0.25</item>
     </style>
 
     <style name="OverflowButtonStyle" parent="android:style/Widget.Material.ActionButton.Overflow">
