Change red error color to yellow for better contrast

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="white_bg_color">#fafafa</color>
     <color name="text_dark_color">#424242</color>
 
+    <color name="colorError">@color/colorAccent</color>
+
 </resources>
