--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,6 +31,9 @@
 
     <style name="TextInputStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeColor">@color/text_main_color</item>
+        <item name="errorTextColor">@color/colorError</item>
+        <item name="boxStrokeErrorColor">@color/colorError</item>
+        <item name="errorIconTint">@color/colorError</item>
         <item name="android:textColorHint">@color/text_main_color</item>
         <item name="hintTextColor">@color/text_main_color</item>
         <item name="android:textColor">@color/text_main_color</item>
