--- a/app/src/main/res/layout/about_app.xml
+++ b/app/src/main/res/layout/about_app.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:nestedScrollingEnabled="true"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:nestedScrollingEnabled="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,15 +35,32 @@
                     android:padding="8dp"
                     android:src="@mipmap/ic_launcher_round" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="serif"
-                    android:text="@string/app_name"
-                    android:letterSpacing="0.05"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/text_dark_color" />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="serif"
+                        android:text="@string/app_name"
+                        android:letterSpacing="0.05"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/text_dark_color" />
+
+                    <TextView
+                        android:id="@+id/txt_version"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:textColor="@color/text_dark_color"
+                        android:fontFamily="monospace"
+                        tools:text="version x.x.x"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <LinearLayout
